feat: remove sample
