# src/swagger-output.json
@@ -572,260 +572,12 @@
         }
       }
     },
-    "/api/sample/post/": {
-      "get": {
-        "tags": [
-          "SamplePost"
-        ],
-        "description": "取得所有 Posts 文章",
-        "parameters": [
-          {
-            "name": "timeSort",
-            "in": "query",
-            "description": "排序 asc, desc",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "content",
-            "in": "query",
-            "description": "搜尋內容",
-            "required": false,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "取得所有文章",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "data": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "_id": {
-                        "type": "string",
-                        "example": "xxxxxxxxxxxxxxxxxxxx"
-                      },
-                      "user": {
-                        "type": "string",
-                        "example": "xxxxxxxxxxxxx"
-                      },
-                      "title": {
-                        "type": "string",
-                        "example": "title"
-                      },
-                      "content": {
-                        "type": "string",
-                        "example": "content"
-                      },
-                      "tag": {
-                        "type": "array",
-                        "example": [
-                          "教學"
-                        ],
-                        "items": {
-                          "type": "string"
-                        }
-                      },
-                      "image": {
-                        "type": "string",
-                        "example": "https://placehold.co/600x400"
-                      },
-                      "likes": {
-                        "type": "number",
-                        "example": 0
-                      },
-                      "comments": {
-                        "type": "number",
-                        "example": 0
-                      },
-                      "isPublic": {
-                        "type": "boolean",
-                        "example": true
-                      },
-                      "createdAt": {
-                        "type": "string",
-                        "example": "2024-04-17T03:59:21.350Z"
-                      },
-                      "updatedAt": {
-                        "type": "string",
-                        "example": "2024-04-24T16:18:34.032Z"
-                      }
-                    }
-                  }
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "SamplePost"
-        ],
-        "description": "新增 Post 文章",
-        "parameters": [
-          {
-            "name": "post",
-            "in": "body",
-            "description": "新增文章",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "user": {
-                  "type": "string",
-                  "example": "xxxxxxxxxxxxxxxxxxxx"
-                },
-                "title": {
-                  "type": "string",
-                  "example": "title"
-                },
-                "content": {
-                  "type": "string",
-                  "example": "content"
-                },
-                "tag": {
-                  "type": "array",
-                  "example": [
-                    "教學"
-                  ],
-                  "items": {
-                    "type": "string"
-                  }
-                },
-                "image": {
-                  "type": "string",
-                  "example": "https://placehold.co/600x400"
-                },
-                "isPublic": {
-                  "type": "boolean",
-                  "example": true
-                }
-              },
-              "required": [
-                "user",
-                "title",
-                "content",
-                "tag"
-              ]
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        },
-        "security": [
-          {
-            "JWT": []
-          }
-        ]
-      }
-    },
-    "/api/sample/post/{id}": {
-      "patch": {
-        "tags": [
-          "SamplePost"
-        ],
-        "description": "修改 Post 文章",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "patch",
-            "in": "body",
-            "description": "修改文章",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "title": {
-                  "type": "string",
-                  "example": "title"
-                },
-                "content": {
-                  "type": "string",
-                  "example": "content"
-                }
-              },
-              "required": [
-                "title",
-                "content"
-              ]
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        },
-        "security": [
-          {
-            "JWT": []
-          }
-        ]
-      },
-      "delete": {
-        "tags": [
-          "SamplePost"
-        ],
-        "description": "刪除 Post 文章",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        },
-        "security": [
-          {
-            "JWT": []
-          }
-        ]
-      }
-    },
     "/api/v1/login": {
       "post": {
         "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
         "responses": {
-          "401": {
-            "description": "Unauthorized"
+          "default": {
+            "description": ""
           }
         }
       }
